src/components/LearnCard/LearnCard.scss
.qui.qui-learn-card {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: white;
  position: relative;
  z-index: -1;
  border-radius: 2em;
  box-shadow: 0px 10px 20px #d2d2d2;
  padding: 1.7em 1.8em;
}
.qui-learn-card .is-hidden {
  display: none;
}
.qui-learn-card .qui-ribbon {
  filter: opacity(80%);
}
.qui-learn-card .qui-ribbon-container {
  height: 50vh;
}
.qui .qui-game-thumbnail {
  height: 10.5em;
  width: 10.5em;
  margin: 0.3em 1.5em 0 0.5em;
  border-radius: 1.2em;
  box-shadow: 0px 10px 20px #d2d2d2;
}
.qui .qui-learn-card-header {
  display: flex;
  justify-content: space-between;
}
.qui .qui-learn-card-header h1 {
  margin: 0;
}
.qui .qui-tag-container {
  margin-top: 0.5em;
}
.qui .qui-points {
  display: flex;
  align-items: center;
}
.qui .qui-points h1 {
  margin-right: 0.2em;
}
.qui .qui-coin-image {
  height: 2em;
  width: 2em;
}
.qui .qui-info {
  display: flex;
  align-items: center;
}
.qui .qui-lower-container {
  position: relative;
  display: flex;
  justify-content: space-between;
}
.qui .qui-lower-container i {
  margin-right: 0.5em;
}
.qui .qui-single-tag {
  padding: 0.5em;
  border-radius: 0.6em;
}
.qui .qui-tags {
  display: flex;
  flex-wrap: wrap;
}
.qui .qui-tags p {
  font-size: 1.3em;
  margin: 0;
  margin-right: 1em;
}
.qui .qui-banner {
  position: absolute;
  bottom: 1%;
  right: 1%;
  height: 135%;
  width: 0.7em;
}
.qui .qui-content {
  margin-left: 1.5em;
}
.qui .qui-info i {
  font-size: 2.7em;
}
.qui .qui-description h2 {
  font-weight: 500;
}
@media only screen and (min-width: 320px) {
  .qui-learn-card {
    font-size: 0.61em;
  }
}
@media only screen and (min-width: 481px) {
  .qui-learn-card {
    font-size: 0.75em;
  }
}
@media only screen and (min-width: 769px) {
  .qui-learn-card {
    font-size: 1em;
  }
}

